Fix invocation of deprecated methods.