@@ -5,6 +5,7 @@ import java.lang.annotation.Retention;
 import java.lang.annotation.RetentionPolicy;
 import java.lang.annotation.Target;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.math.BigDecimal;
 import java.util.ArrayList;
@@ -553,10 +554,10 @@ public abstract class AbstractReport {
 
 	public static <E extends AbstractReport> E getInstance(Class<E> clazz, Document ixDoc) {
 		try {
-			E ret = clazz.newInstance();
+			E ret = clazz.getDeclaredConstructor().newInstance();
 			ret.init(ixDoc);
 			return ret;
-		} catch (InstantiationException | IllegalAccessException e) {
+		} catch (InstantiationException | IllegalAccessException | IllegalArgumentException | InvocationTargetException | NoSuchMethodException | SecurityException e) {
 			String exceptionName = e.getClass().getSimpleName();
 			logger.error("{} {}", exceptionName, e);
 			throw new UnexpectedException(exceptionName, e);
